# DeepResearchPy

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  research_config.yaml  ruff.toml  run.py
src/: terminal_gui.py
src/common/: cherry_picker.py  config.py  deduplicate_queries.py  exceptions.py  schemas.py  semantic_similarity.py  types.py
src/deep_research/: answer_step.py  base_step.py  main_agent.py  reflect_step.py  search_step.py  visit_step.py
src/evaluate/: evaluate_answer.py  evaluate_question.py
src/llms/: __init__.py  base_llm.py  message.py  mistral.py  openai.py
src/prompts/: deduplicate_prompts.py  error_analysis_prompts.py  evaluation_prompts.py  main_agent_prompts.py  prompt_utils.py  query_rewrite_prompts.py
src/prompts/templates/: attribution_eval_user_prompt_template.j2  default_eval_user_prompt_template.j2  main_agent_prompt_template.j2  query_dedup_user_prompt_template.j2  query_rewrite_sys_prompt_template.j2  query_rewrite_user_prompt_template.j2
src/utils/: date_utils.py  logger.py  sample_k.py  url_utils.py
tests/unit/: __init__.py
