[project]
name = "deep-research"
version = "0.1.0"
authors = [
    {name = "Aghiles",email = "aghiles.ahmed.azzoug@gmail.com"},
    {name = "Lila",email = "boualili18lila@gmail.com"}
]
readme = "README.md"
license = "MIT"
description = "Deep Research Agent"
keywords = ["Deep research", "agent", "LLM", "web search"]

requires-python = ">=3.12,<4.0"
dependencies = [
    "coloredlogs>=15.0.1",
    "duckduckgo-search>=8.0.1",
    "googlesearch-python>=1.3.0",
    "jinja2>=3.1.6",
    "markdownify>=1.1.0",
    "mistralai>=1.7.0",
    "openai>=1.78.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "tenacity>=9.1.2",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "verboselogs>=1.7",
    "yt-dlp>=2025.5.22",
]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.uv]
package = true